<resources>
    <string name="app_name">Contacts</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
</resources>